--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "wsutils",
+  "name": "ws-utils",
   "version": "0.2.0",
   "description": "utils",
-  "main": "index.js",
+  "main": "min/ws-utils.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node script/build.js"
